fix navigation on mobile devices

--- a/src/style/screen.scss
+++ b/src/style/screen.scss
@@ -82,7 +82,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 13vw 0;
+  padding: 6vw 0;
   max-width: 70%;
   margin: auto;
   text-align: center;
@@ -506,7 +506,23 @@ body {
 
 .post-card.with-image .post-card-content {
   opacity: 0;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 4vw;
+  flex-direction: column;
+  color: $color-body-font-light;
+  background-color: rgba(255,255,255,0.8);
 }
+
+.post-card.with-image .post-card-date,
+.post-card.with-image .post-card-body,
+.post-card.with-image .post-card-readmore,
+.post-card.with-image .post-card-tag-link {
+  font-weight: bold;
+  font-size: 2rem;
+  color: $color-body-font-light;
+}
+
 @media (max-width: 700px) {
   .post-card.with-image .post-card-content {
     opacity: 1;
@@ -521,8 +537,9 @@ body {
 .post-card-title {
   margin: 0;
   display: inline-block;
-  font-size: 3.4rem;
-  /* max-width: 70%; */
+  font-size: 4.4rem;
+  width: 100%;
+  padding-bottom: 1rem;
   text-align: center;
   transition: all 0.3s cubic-bezier(0.33, 0, 0.2, 1);
 }
@@ -561,37 +578,37 @@ body {
 }
 
 @media (max-width: 1200px) {
-  .post-card.no-image .post-card-title {
+  .post-card .post-card-title {
     font-size: 3.4rem;
   }
-  .post-card.no-image .post-card-date,
-  .post-card.no-image .post-card-body,
-  .post-card.no-image .post-card-readmore,
-  .post-card.no-image .post-card-tag-link {
+  .post-card .post-card-date,
+  .post-card .post-card-body,
+  .post-card .post-card-readmore,
+  .post-card .post-card-tag-link {
     font-size: 1.4rem;
   }
 }
 @media (max-width: 940px) {
   /* .post-card.no-image .post-card-date, */
-  .post-card.no-image .post-card-body,
-  .post-card.no-image .post-card-readmore {
+  .post-card .post-card-body,
+  .post-card .post-card-readmore {
     display: none;
   }
 }
 @media (max-width: 700px) {
-  .post-card.no-image:before {
+  .post-card:before {
     font-size: 50vw;
   }
   /* .post-card.no-image .post-card-date, */
-  .post-card.no-image .post-card-body,
-  .post-card.no-image .post-card-readmore {
+  .post-card .post-card-body,
+  .post-card .post-card-readmore {
     display: block;
   }
 }
 @media (max-width: 430px) {
   /* .post-card.no-image .post-card-date, */
-  .post-card.no-image .post-card-body,
-  .post-card.no-image .post-card-readmore {
+  .post-card .post-card-body,
+  .post-card .post-card-readmore {
     display: none;
   }
 }
